hw-05/kubernetes/app-chart/templates/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app.kubernetes.io/name: auth
spec:
  selector:
    app.kubernetes.io/name: auth
  ports:
    - port: 8000
      targetPort: port
