hw-05/kubernetes/app-chart/templates/profile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-service
  namespace: app
  labels:
    app.kubernetes.io/name: profile
spec:
  selector:
    app.kubernetes.io/name: profile
  ports:
    - port: 8000
      targetPort: port
