hw-05/kubernetes/app-chart/templates/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/name: auth
spec:
  ingressClassName: nginx
  rules:
   - host: arch.homework
     http:
       paths:
        - path: /(auth|login|logout|register)
          pathType: ImplementationSpecific
          backend:
            service:
              name: auth-service
              port:
                number: 8000
