hw-05/kubernetes/app-chart/templates/profile-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profile-ingress
  labels:
    app.kubernetes.io/name: profile
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: http://arch.homework/auth
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-response-headers: X-User
spec:
  ingressClassName: nginx
  rules:
   - host: arch.homework
     http:
       paths:
        - path: /(profiles/)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: profile-service
              port:
                number: 8000
